--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "node server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "seed": "node utils/seed"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/DanOlmedo/Social_network_API/issues"
   },
-  "homepage": "https://github.com/DanOlmedo/Social_network_API#readme"
+  "homepage": "https://github.com/DanOlmedo/Social_network_API#readme",
+  "dependencies": {
+    "express": "^4.18.1",
+    "mongoose": "^6.4.4"
+  }
 }
